css fix for android overflow, responsive styles for email form

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -117,6 +117,7 @@ a {
   display: grid;
   grid-template-rows: 1fr minmax(240px, auto);
   min-height: 100vh;
+  overflow: hidden;
 }
 
 main {
@@ -243,10 +244,10 @@ header.site-header[data-scrolled=true] {
 }
 header.site-header .container {
   align-items: center;
-  height: 100%;
-  width: min(1440px, 90vw);
   display: flex;
+  height: 100%;
   justify-content: space-between;
+  width: min(1440px, 96vw);
 }
 header.site-header .container > * {
   z-index: 2;
@@ -1022,8 +1023,21 @@ footer nav[aria-label=Secondary] ul {
   border-radius: 0.25rem;
   border: none;
   color: var(--white);
+  margin-block-end: 1rem;
   padding: 0.5rem 1rem;
 }
+.email-form fieldset input[type=email],
+.email-form fieldset button[type=submit] {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .email-form fieldset input[type=email],
+.email-form fieldset button[type=submit] {
+    margin-block-end: 0;
+    width: auto;
+  }
+}
+
 .text-center {
   text-align: center;
 }
