--- a/src/sass/_email-form.scss
+++ b/src/sass/_email-form.scss
@@ -28,11 +28,22 @@
       border-radius: 0.25rem;
       border: none;
       color: var(--white);
+      margin-block-end: 1rem;
       padding: 0.5rem 1rem;
     }
 
     button[type='submit'] {
       @extend .button;
+    }
+
+    input[type='email'],
+    button[type='submit'] {
+      width: 100%;
+
+      @media (min-width: $breakpoint-md) {
+        margin-block-end: 0;
+        width: auto;
+      }
     }
   }
 }
